fixed overflow bug

--- a/dev/datenschutz/datenschutz.css
+++ b/dev/datenschutz/datenschutz.css
@@ -1,6 +1,7 @@
 section-datenschutz {
 	display: block;
 	padding: 58px 8px 0px;
+	word-break: break-word;
 }
 
 section-datenschutz a {
