--- a/dev/header/header.css
+++ b/dev/header/header.css
@@ -12,4 +12,5 @@
 	left: 0px;
 	z-index: 2;
 	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	white-space: nowrap;
 }
