--- a/dev/impressum/impressum.css
+++ b/dev/impressum/impressum.css
@@ -2,6 +2,7 @@ section-impressum {
 	display: block;
 	text-align: center;
 	padding: 50px 10px 0px;
+	word-break: break-word;
 }
 
 section-impressum > .header {
